fix add-card alert modal

--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "pages": [    
-    
     "pages/calendar/calendar",
     "pages/daily/daily",
     "pages/daily/addcard/addcard",
@@ -8,9 +7,7 @@
     "pages/fittime/detail/detail",
     "pages/training/training",
     "pages/training/addTraining/addTraining",
-    "pages/index/index",
-    "pages/test/test",
-    "pages/logs/logs"
+    "pages/index/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
