--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.7.2",
-	"appid": "wxc227ffdb045e3589",
-	"projectname": "shapeTime",
+	"appid": "wx7e1d0605e8b10524",
+	"projectname": "%E5%B0%8F%E6%A7%91%E5%A5%BD",
 	"condition": {
 		"search": {
 			"current": -1,
